스타일 수정 및 글 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,13 @@
-- name: Home
+- user: zerozoo-a
+- name: 🏠 HOME
   link: /
-- name: About
-  link: /about.html
-- name: Blog
-  link: /blog.html
+#- name: 📝 POSTS
+#  link: /blog.html
+- name: 💁‍ CATEGORY
+  link: /categories.html
+- name: 🔖 TAG
+  link: /tags.html
 - name: Staff
   link: /staff.html
-- name: Category
-  link: /categories.html
-- name: Tags
-  link: /tags.html
+- name: About
+  link: /about.html
