--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-#title: zerozoo
-#email: zerozoo385@gmail.com
-#description: >- # this means to ignore newlines until "baseurl:"
-#  😽
-#baseurl: "" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
-#twitter_username: nil
-#github_username:  zerozoo-front
 #
 ## Build settings
-##theme: minima
-#plugins:
-#  - jekyll-feed
+#theme: minima
 #
 ## Exclude from processing.
 ## The following items will not be processed, by default.
@@ -73,3 +63,20 @@ defaults:
       layout: "default"
 
 category_list: [ jekyll, js, clojure, algo, DB, CS, etc, configs, living ]
+
+plugins:
+  - jekyll-feed
+
+
+title: zerozoo
+email: zerozoo385@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  😽
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: nil
+github_username:  zerozoo-front
+
+algolia:
+  index_name: SO3HY1LT1Y
+  application_id: 'SO3HY1LT1Y'
