--- a/_config.yml
+++ b/_config.yml
@@ -75,8 +75,55 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: nil
-github_username:  zerozoo-front
+github_username:  zerozoo-a
 
 algolia:
   index_name: SO3HY1LT1Y
   application_id: 'SO3HY1LT1Y'
+
+sass:
+  sass_dir: assets/css
+
+
+# --- assets plugin
+#
+#assets:
+#  source_maps: true
+#  destination: "/assets"
+#  compression: false
+#  gzip: false
+#  defaults:
+#    integrity:
+#      {css,img,js}: false
+#  caching:
+#    enabled: true
+#    path: ".jekyll-cache/assets"
+#    type: file
+#  # --
+#  # Assets you wish to always have compiled.
+#  #   This can also be combined with raw_precompile which
+#  #   copies assets without running through the pipeline
+#  #   making them ultra fast.
+#  # --
+#  precompile: []
+#  raw_precompile: [
+#    #
+#  ]
+#  # --
+#  # baseurl: whether or not to append site.baseurl
+#  # destination: the folder you store them in on the CDN.
+#  # url: the CDN url (fqdn, or w/ identifier).
+#  # --
+#  cdn:
+#    baseurl: false
+#    destination: false
+#    url: null
+#  # --
+#  # See lib/jekyll/assets/config.rb
+#  #   for a list of defaults
+#  # --
+#  sources:
+#    - _assets/custom
+#  plugins:
+#    css: { autoprefixer: {}}
+#    img: { optim: {}}
