adding js libs, css libs and stylling

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,11 @@ category_list: [ jekyll, js, clojure, algo, DB, CS, etc, configs, living ]
 
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+
+# paginate_path: /page:num
+paginate: 2
+paginate_path: "/index/page:num/"
 
 
 title: zerozoo
