--- a/_config.yml
+++ b/_config.yml
@@ -1,47 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
-#
-## Build settings
-#theme: minima
-#
-## Exclude from processing.
-## The following items will not be processed, by default.
-## Any item listed under the `exclude:` key here will be automatically added to
-## the internal "default list".
-##
-## Excluded items can be processed by explicitly listing the directories or
-## their entries' file path in the `include:` list.
-##
-## exclude:
-##   - .sass-cache/
-##   - .jekyll-cache/
-##   - gemfiles/
-##   - Gemfile
-##   - Gemfile.lock
-##   - node_modules/
-##   - vendor/bundle/
-##   - vendor/cache/
-##   - vendor/gems/
-##   - vendor/ruby/
-
 collections:
   authors:
     output: true
@@ -72,7 +28,7 @@ plugins:
 paginate: 2
 paginate_path: "/index/page:num/"
 
-
+# personal info
 title: zerozoo
 email: zerozoo385@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -89,46 +45,3 @@ algolia:
 sass:
   sass_dir: assets/css
 
-
-# --- assets plugin
-#
-#assets:
-#  source_maps: true
-#  destination: "/assets"
-#  compression: false
-#  gzip: false
-#  defaults:
-#    integrity:
-#      {css,img,js}: false
-#  caching:
-#    enabled: true
-#    path: ".jekyll-cache/assets"
-#    type: file
-#  # --
-#  # Assets you wish to always have compiled.
-#  #   This can also be combined with raw_precompile which
-#  #   copies assets without running through the pipeline
-#  #   making them ultra fast.
-#  # --
-#  precompile: []
-#  raw_precompile: [
-#    #
-#  ]
-#  # --
-#  # baseurl: whether or not to append site.baseurl
-#  # destination: the folder you store them in on the CDN.
-#  # url: the CDN url (fqdn, or w/ identifier).
-#  # --
-#  cdn:
-#    baseurl: false
-#    destination: false
-#    url: null
-#  # --
-#  # See lib/jekyll/assets/config.rb
-#  #   for a list of defaults
-#  # --
-#  sources:
-#    - _assets/custom
-#  plugins:
-#    css: { autoprefixer: {}}
-#    img: { optim: {}}
