--- a/_config.yml
+++ b/_config.yml
@@ -45,3 +45,14 @@ algolia:
 sass:
   sass_dir: assets/css
 
+
+# Rough syntax highlighter: rouge
+# Jekyll configuration
+markdown: kramdown
+# kramdown : markdown의 개조판.
+# markdown에서 불편한 사항을 개선한 형태.
+
+highlighter: rouge
+# text highlighter로 rouge이용
+# 2016.02월 이후로 syntax highlighter는 rouge만 지원.
+# Pygments 사용불가.
