fs 글 추가 및 스타일링

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+
 collections:
   authors:
     output: true
@@ -35,7 +36,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   😽
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: nil
+twitter: nil
 github_username:  zerozoo-a
 
 algolia:
@@ -43,7 +44,7 @@ algolia:
   application_id: 'SO3HY1LT1Y'
 
 sass:
-  sass_dir: assets/css
+  style: compressed # possible values: nested expanded compact compressed
 
 
 # Rough syntax highlighter: rouge
