config: blog config

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ category_list: [ jekyll, js, clojure, algo, DB, CS, etc, configs, living ]
 plugins:
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-sitemap
 
 # paginate_path: /page:num
 paginate: 4
