--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ title: zerozoo
 email: zerozoo385@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   😽
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://zerozoo-a.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter: nil
 github_username:  zerozoo-a
 
