--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -84,4 +84,4 @@ jobs:
             ${{ runner.os }}-gems-
       - uses: helaili/jekyll-action@2.4.0   # Choose any one of the Jekyll Actions
         with:                                # Some relative inputs of your action
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.myRepoToken }}
