--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -60,7 +60,7 @@
 #     steps:
 #       - name: Deploy to GitHub Pages
 #         id: deployment
-#         uses: actions/deploy-pages@v1
+# #         uses: actions/deploy-pages@v1
 
 name: Build and deploy Jekyll site to GitHub Pages
 
@@ -84,4 +84,27 @@ jobs:
             ${{ runner.os }}-gems-
       - uses: helaili/jekyll-action@2.4.0   # Choose any one of the Jekyll Actions
         with:                                # Some relative inputs of your action
-          token: ${{ secrets.myRepoToken }}
+          gh: ${{ secrets.gh-pages }}
+# name: Jekyll CI
+
+# on:
+#   push
+
+# jobs:
+#   jekyll:
+#     runs-on: ubuntu-16.04
+#     steps:
+#     - uses: actions/checkout@v2
+
+#     # Use GitHub Actions' cache to shorten build times and decrease load on servers
+#     - uses: actions/cache@v1
+#       with:
+#         path: vendor/bundle
+#         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+#         restore-keys: |
+#           ${{ runner.os }}-gems-
+
+#     # Standard usage
+#     - uses:  helaili/jekyll-action@2.0.3
+#       env:
+#         gh: ${{ secrets.gh }}
