--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,6 @@ defaults:
 
 category_list: [ jekyll, js, clojure, algo, DB, CS, etc, configs, living ]
 
-plugins:
-  - jekyll-feed
-  - jekyll-paginate
-  - jekyll-sitemap
 
 # paginate_path: /page:num
 paginate: 4
@@ -35,10 +31,15 @@ title: zerozoo
 email: zerozoo385@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   😽
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://zerozoo-a.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+plugins:
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap
 twitter: nil
 github_username:  zerozoo-a
+safe: true
 
 algolia:
   index_name: SO3HY1LT1Y
