[STYLE]: layout css 수정

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,11 @@
 - user: zerozoo-a
 - name: 🏠 HOME
   link: /
-#- name: 📝 POSTS
-#  link: /blog.html
 - name: 💁‍ CATEGORY
   link: /categories.html
 - name: 🔖 TAG
   link: /tags.html
-- name: Staff
-  link: /staff.html
 - name: About
   link: /about.html
-- name: Github
+- name: <img src="/assets/images/iconmonstr-github-1-24.webp" />
   link: https://github.com/zerozoo-a
