--- a/_config.yml
+++ b/_config.yml
@@ -69,3 +69,6 @@ asciidoctor:
     - idseparator=_
     - source-highlighter=coderay
     - icons=font
+exclude:
+  - node_modules
+  - dev-react-pages
