[CREATE]: IC html 생성 IC는 image convert합니다. IC는 jpeg, png 등의 이미지 파일을 webp로 변경합니다

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,7 @@
   link: /tags.html
 - name: About
   link: /about.html
+- name: ♻️ Image convertor
+  link: /ic.html
 - name: <img src="/assets/images/iconmonstr-github-1-24.webp" />
   link: https://github.com/zerozoo-a
