[CREATE]: katex 추가 및 수학학post추가

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ defaults:
     values:
       layout: "default"
 
-category_list: [ jekyll, js, clojure, algo, DB, CS, etc, configs, living ]
+category_list: [ algorithm, math ]
 
 
 # paginate_path: /page:num
@@ -37,6 +37,7 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-katex
 twitter: nil
 github_username:  zerozoo-a
 safe: true
