[FIX]: layout 수정 및 불필요한 파일 삭제

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ category_list: [ algorithm, math ]
 # paginate_path: /page:num
 paginate: 4
 paginate_path: "/index/page:num/"
+excerpt_seperator:  <!--break-->
 
 # personal info
 title: zerozoo
