[CREATE]: vue app 추가

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-
 collections:
   authors:
     output: true
@@ -19,13 +18,12 @@ defaults:
     values:
       layout: "default"
 
-category_list: [ algorithm, math ]
-
+category_list: [algorithm, math]
 
 # paginate_path: /page:num
 paginate: 4
 paginate_path: "/index/page:num/"
-excerpt_seperator:  <!--break-->
+excerpt_seperator: <!--break-->
 
 # personal info
 title: zerozoo
@@ -39,16 +37,15 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 twitter: nil
-github_username:  zerozoo-a
+github_username: zerozoo-a
 safe: true
 
 algolia:
   index_name: SO3HY1LT1Y
-  application_id: 'SO3HY1LT1Y'
+  application_id: "SO3HY1LT1Y"
 
 sass:
   style: compressed # possible values: nested expanded compact compressed
-
 
 # Rough syntax highlighter: rouge
 # Jekyll configuration
@@ -61,7 +58,6 @@ highlighter: rouge
 # 2016.02월 이후로 syntax highlighter는 rouge만 지원.
 # Pygments 사용불가.
 
-
 asciidoc: {}
 asciidoctor:
   base_dir: :docdir
@@ -73,3 +69,9 @@ asciidoctor:
 exclude:
   - node_modules
   - dev-react-pages
+  - Gemfile
+  - Gemfile.lock
+  - assets/js/app/
+include:
+  - .htaccess
+  - assets/js/app/dist/
