--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,3 +11,5 @@
   link: /ic.html
 - name: <img src="/assets/images/iconmonstr-github-1-24.webp" />
   link: https://github.com/zerozoo-a
+- name: app
+  link: /assets/js/dist/app.html
