--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -26,8 +26,7 @@ jobs:
 
       - name: Install dependencies & build
         run: |
-          npm -v
-          npm i
+          npm ci
           npm run build-ghpages          
 
       - name: Deploy
