글 추가 및 세팅중...

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@11ty/eleventy-plugin-bundle": "latest",
 		"@11ty/eleventy-plugin-rss": "latest",
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
+		"@types/node": "^18.15.3",
 		"luxon": "latest",
 		"markdown-it-anchor": "latest"
 	}
