--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"@types/node": "^18.15.3",
 		"luxon": "latest",
 		"markdown-it-anchor": "latest"
+	},
+	"dependencies": {
+		"dotenv": "^16.0.3"
 	}
 }
