--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
 		"@11ty/eleventy-plugin-bundle": "latest",
 		"@11ty/eleventy-plugin-rss": "latest",
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
-		"@types/node": "^18.15.3",
+		"@types/node": "latest",
 		"luxon": "latest",
 		"markdown-it-anchor": "latest"
 	},
 	"dependencies": {
-		"dotenv": "^16.0.3"
+		"dotenv": "latest"
 	}
 }
