[post]: add cardgame

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 	"homepage": "https://github.com/11ty/eleventy-base-blog#readme",
 	"devDependencies": {
 		"@11ty/eleventy": "latest",
-		"@11ty/eleventy-img": "latest",
+		"@11ty/eleventy-img": "^3.1.0",
 		"@11ty/eleventy-navigation": "latest",
 		"@11ty/eleventy-plugin-bundle": "latest",
 		"@11ty/eleventy-plugin-rss": "latest",
