--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 		"url": "git://github.com/11ty/eleventy-base-blog.git"
 	},
 	"author": {
-		"name": "Zach Leatherman",
-		"email": "zachleatherman@gmail.com",
-		"url": "https://zachleat.com/"
+		"name": "zerozoo-a",
+		"email": "zerozoo385@gmail.com",
+		"url": "https://zerozoo-a.github.io/"
 	},
 	"license": "MIT",
 	"engines": {
@@ -34,7 +34,7 @@
 	"homepage": "https://github.com/11ty/eleventy-base-blog#readme",
 	"devDependencies": {
 		"@11ty/eleventy": "latest",
-		"@11ty/eleventy-img": "^3.1.0",
+		"@11ty/eleventy-img": "latest",
 		"@11ty/eleventy-navigation": "latest",
 		"@11ty/eleventy-plugin-bundle": "latest",
 		"@11ty/eleventy-plugin-rss": "latest",
