--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
 		"@types/node": "latest",
 		"luxon": "latest",
-		"markdown-it-anchor": "latest"
+		"markdown-it-anchor": "^8.6.7"
 	},
 	"dependencies": {
-		"dotenv": "latest"
+		"dotenv": "latest",
+		"eleventy-plugin-toc": "^1.1.5"
 	}
 }
