cover image resizing for efficency

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	},
 	"dependencies": {
 		"dotenv": "latest",
-		"eleventy-plugin-toc": "^1.1.5"
+		"eleventy-plugin-toc": "^1.1.5",
+		"sharp": "^0.32.1"
 	}
 }
