--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
 		"markdown-it-anchor": "^8.6.7"
 	},
 	"dependencies": {
+		"@iktakahiro/markdown-it-katex": "^4.0.1",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "^1.1.5",
+		"markdown-it": "^13.0.1",
 		"sharp": "^0.32.1"
 	}
 }
