add post coin change

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
 		"@types/node": "latest",
 		"luxon": "latest",
-		"markdown-it-anchor": "^8.6.7"
+		"markdown-it-anchor": "^8.6.7",
+		"mermaid": "^10.2.3"
 	},
 	"dependencies": {
 		"@iktakahiro/markdown-it-katex": "^4.0.1",
