--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
 		"@types/node": "latest",
 		"luxon": "latest",
-		"markdown-it-anchor": "^8.6.7",
-		"mermaid": "^10.2.3"
+		"markdown-it-anchor": "^8.6.7"
 	},
 	"dependencies": {
 		"@iktakahiro/markdown-it-katex": "^4.0.1",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "^1.1.5",
 		"markdown-it": "^13.0.1",
+		"markdown-it-textual-uml": "^0.12.0",
 		"sharp": "^0.32.1"
 	}
 }
