--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"debug": "DEBUG=Eleventy* npx @11ty/eleventy",
 		"debugstart": "DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
 		"benchmark": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
-		"post": "node createPost.js"
+		"post": "node createPost.js",
+		"dd": "docker run -d -p 8080:8080 -v $pwd:/usr/src/app blog",
+		"bb": "docker build -t blog ."
 	},
 	"repository": {
 		"type": "git",
@@ -41,7 +43,8 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
 		"@types/node": "latest",
 		"luxon": "latest",
-		"markdown-it-anchor": "^8.6.7"
+		"markdown-it-anchor": "^8.6.7",
+		"nodemon": "^2.0.22"
 	},
 	"dependencies": {
 		"@iktakahiro/markdown-it-katex": "^4.0.1",
