--- a/package.json
+++ b/package.json
@@ -43,15 +43,15 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
 		"@types/node": "latest",
 		"luxon": "latest",
-		"markdown-it-anchor": "^8.6.7",
-		"nodemon": "^2.0.22"
+		"markdown-it-anchor": "latest",
+		"nodemon": "latest"
 	},
 	"dependencies": {
-		"@iktakahiro/markdown-it-katex": "^4.0.1",
+		"@iktakahiro/markdown-it-katex": "latest",
 		"dotenv": "latest",
-		"eleventy-plugin-toc": "^1.1.5",
-		"markdown-it": "^13.0.1",
-		"markdown-it-textual-uml": "^0.12.0",
-		"sharp": "^0.32.1"
+		"eleventy-plugin-toc": "latest",
+		"markdown-it": "latest",
+		"markdown-it-textual-uml": "latest",
+		"sharp": "latest"
 	}
 }
