--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	},
 	"dependencies": {
 		"@iktakahiro/markdown-it-katex": "latest",
+		"chalk": "^5.3.0",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
 		"markdown-it": "latest",
