--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"benchmark": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
 		"post": "node createPost.js",
 		"dd": "docker run -d -p 8080:8080 -v $pwd:/usr/src/app blog",
-		"bb": "docker build -t blog ."
+		"bb": "docker build -t blog .",
+		"clear-db":"rm imageURL2base64Db.json"
 	},
 	"repository": {
 		"type": "git",
