--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
 	"scripts": {
 		"build": "npx @11ty/eleventy",
 		"build-ghpages": "npx @11ty/eleventy",
-		"start": "npx @11ty/eleventy --serve --quiet",
+		"start": "npx @11ty/eleventy --serve --quiet --incremental",
 		"debug": "DEBUG=Eleventy* npx @11ty/eleventy",
 		"debugstart": "DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
 		"benchmark": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
 		"post": "node createPost.js",
 		"dd": "docker run -d -p 8080:8080 -v $pwd:/usr/src/app blog",
 		"bb": "docker build -t blog .",
-		"clear-db":"rm imageURL2base64Db.json"
+		"clear-db": "rm imageURL2base64Db.json"
 	},
 	"repository": {
 		"type": "git",
