--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 	},
 	"dependencies": {
 		"@iktakahiro/markdown-it-katex": "latest",
+		"@kevingimbel/eleventy-plugin-mermaid": "^2.1.0",
 		"chalk": "^5.3.0",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
