--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
 		"nodemon": "latest"
 	},
 	"dependencies": {
-		"@11ty/eleventy-plugin-webc": "^0.11.1",
 		"@iktakahiro/markdown-it-katex": "latest",
-		"@kevingimbel/eleventy-plugin-mermaid": "^2.1.0",
-		"chalk": "^5.3.0",
+		"@kevingimbel/eleventy-plugin-mermaid": "latest",
+		"chalk": "latest",
+		"commander": "latest",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
 		"markdown-it": "latest",
 		"markdown-it-textual-uml": "latest",
-		"mermaid": "^10.3.0",
+		"mermaid": "latest",
 		"sharp": "latest"
 	}
 }
