--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"commander": "latest",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
+		"inquirer": "^9.2.10",
 		"markdown-it": "latest",
 		"markdown-it-textual-uml": "latest",
 		"mermaid": "latest",
