--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
 		"commander": "latest",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
-		"inquirer": "^9.2.10",
+		"inquirer": "^9.2.11",
 		"markdown-it": "latest",
-		"markdown-it-textual-uml": "latest",
+		"markdown-it-textual-uml": "0.14.0",
 		"mermaid": "latest",
 		"sharp": "latest"
 	}
