add rational function2

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"markdown-it": "latest",
 		"markdown-it-textual-uml": "0.14.0",
 		"mermaid": "latest",
-		"sharp": "latest"
+		"sharp": "latest",
+		"zlib": "^1.0.5"
 	}
 }
