--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"commander": "latest",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
+		"fast-json-stringify": "^5.8.0",
 		"inquirer": "^9.2.11",
 		"markdown-it": "latest",
 		"markdown-it-textual-uml": "0.14.0",
