--- a/package.json
+++ b/package.json
@@ -50,8 +50,6 @@
 	"dependencies": {
 		"@iktakahiro/markdown-it-katex": "latest",
 		"@kevingimbel/eleventy-plugin-mermaid": "latest",
-		"chalk": "latest",
-		"commander": "latest",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
 		"fast-json-stringify": "^5.8.0",
@@ -59,7 +57,6 @@
 		"markdown-it": "latest",
 		"markdown-it-textual-uml": "0.14.0",
 		"mermaid": "latest",
-		"sharp": "latest",
-		"zlib": "^1.0.5"
+		"sharp": "latest"
 	}
 }
