--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
 	},
 	"homepage": "https://github.com/11ty/eleventy-base-blog#readme",
 	"devDependencies": {
-		"@11ty/eleventy": "latest",
-		"@11ty/eleventy-img": "latest",
+		"@11ty/eleventy": "^2.0.1",
+		"@11ty/eleventy-img": "3.1.1",
 		"@11ty/eleventy-navigation": "latest",
 		"@11ty/eleventy-plugin-bundle": "latest",
 		"@11ty/eleventy-plugin-rss": "latest",
