--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 	"dependencies": {
 		"@iktakahiro/markdown-it-katex": "latest",
 		"@kevingimbel/eleventy-plugin-mermaid": "latest",
+		"agile": "^0.0.2",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
 		"fast-json-stringify": "^5.8.0",
@@ -57,6 +58,7 @@
 		"markdown-it": "latest",
 		"markdown-it-textual-uml": "0.14.0",
 		"mermaid": "10.6.0",
+		"post": "^0.0.1",
 		"sharp": "latest"
 	}
 }
