--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@11ty/eleventy-plugin-bundle": "latest",
 		"@11ty/eleventy-plugin-rss": "latest",
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
+		"@quasibit/eleventy-plugin-schema": "^1.11.0",
 		"@types/node": "latest",
 		"luxon": "latest",
 		"markdown-it-anchor": "latest",
