add low db for images

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"eleventy-plugin-toc": "latest",
 		"fast-json-stringify": "^5.8.0",
 		"inquirer": "^9.2.11",
+		"lowdb": "^6.1.1",
 		"markdown-it": "latest",
 		"markdown-it-textual-uml": "0.14.0",
 		"mermaid": "10.6.0",
