--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"@11ty/eleventy-img": "3.1.1",
 		"@11ty/eleventy-navigation": "latest",
 		"@11ty/eleventy-plugin-bundle": "latest",
-		"@11ty/eleventy-plugin-rss": "latest",
+		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
 		"@quasibit/eleventy-plugin-schema": "^1.11.0",
 		"@types/node": "latest",
