--- a/package.json
+++ b/package.json
@@ -49,10 +49,13 @@
 		"nodemon": "latest"
 	},
 	"dependencies": {
+		"@11ty/is-land": "^4.0.0",
+		"@babylonjs/core": "^6.41.0",
 		"@iktakahiro/markdown-it-katex": "latest",
 		"@kevingimbel/eleventy-plugin-mermaid": "latest",
 		"dotenv": "latest",
 		"eleventy-plugin-toc": "latest",
+		"esm-import-transformer": "^1.0.1",
 		"markdown-it": "latest",
 		"markdown-it-textual-uml": "0.14.0",
 		"mermaid": "10.6.0",
