--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"nodemon": "latest"
 	},
 	"dependencies": {
+		"@11ty/eleventy-plugin-vite": "^4.0.0",
 		"@11ty/is-land": "^4.0.0",
 		"@babylonjs/core": "^6.41.0",
 		"@iktakahiro/markdown-it-katex": "latest",
