--- a/sub_domains/web_gpu/package.json
+++ b/sub_domains/web_gpu/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "pnpm install && tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
