--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
 	"scripts": {
 		"build": "npx @11ty/eleventy --quiet",
 		"build-ghpages": "pnpm build_sub_domain_web_gpu && npx @11ty/eleventy --quiet",
-		"d": "pnpm build_sub_domain_web_gpu && npx @11ty/eleventy --serve --quiet --incremental",
+		"d": "npx @11ty/eleventy --serve --quiet --incremental",
 		"dev": "pnpm build_sub_domain_web_gpu && npx @11ty/eleventy --serve --quiet --incremental",
 		"debug": "DEBUG=Eleventy* npx @11ty/eleventy",
 		"debugstart": "DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
 		"benchmark": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
 		"post": "node createPost.js",
 		"clear-db": "rm imageURL2base64Db.json",
-		"build_sub_domain_web_gpu":"pnpm run rid_web_gpu && pnpm --prefix ./sub_domains/web_gpu/ run build && cp -r ./sub_domains/web_gpu/dist ./content/sub_domains/web_gpu",
-		"rid_web_gpu":"rm -rf ./content/sub_domains/web_gpu"
+		"build_sub_domain_web_gpu": "pnpm run rid_web_gpu && pnpm --prefix ./sub_domains/web_gpu/ run build && cp -r ./sub_domains/web_gpu/dist ./content/sub_domains/web_gpu",
+		"rid_web_gpu": "rm -rf ./content/sub_domains/web_gpu"
 	},
 	"repository": {
 		"type": "git",
@@ -40,7 +40,7 @@
 		"@11ty/eleventy": "^2.0.1",
 		"@11ty/eleventy-img": "3.1.1",
 		"@11ty/eleventy-navigation": "latest",
-		"@11ty/eleventy-plugin-bundle": "latest",
+		"@11ty/eleventy-plugin-bundle": "1.0.5",
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "latest",
 		"@quasibit/eleventy-plugin-schema": "^1.11.0",
@@ -58,6 +58,6 @@
 		"markdown-it-textual-uml": "0.14.0",
 		"mermaid": "10.6.0",
 		"sharp": "latest",
-		"vite": "^5.1.3"
+		"vite": "^5.2.11"
 	}
 }
