--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "npx @11ty/eleventy --quiet",
 		"build-ghpages": "pnpm build_sub_domain_web_gpu && npx @11ty/eleventy --quiet",
 		"d": "npx @11ty/eleventy --serve --quiet --incremental",
-		"dev": "pnpm build_sub_domain_web_gpu && npx @11ty/eleventy --serve --quiet --incremental",
+		"dev_": "pnpm build_sub_domain_web_gpu && npx @11ty/eleventy --serve --quiet --incremental",
 		"debug": "DEBUG=Eleventy* npx @11ty/eleventy",
 		"debugstart": "DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
 		"benchmark": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
